--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.31'
     ext.anko_version='0.10.8'
+    ext.kotlin_coroutines = '1.3.1'
     repositories {
         google()
         jcenter()
