--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // TinkerPatch 插件
+        classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:1.2.14.5"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
