--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,13 @@
         <activity android:name=".TTSActivity" />
         <activity android:name=".HorizontalVerticalActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".activity.KotlinTestActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
